Added dist to build, fixed build issues

--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/common/_global.scss
@@ -215,7 +215,7 @@ span,
     margin-left: -30px;
     opacity: 0.8;
     transition: 0.2s all ease-out;
-    background: url(images/play-icon-white.svg) no-repeat center center / contain;
+    background: url(../images/play-icon-white.svg) no-repeat center center / contain;
   }
 
   &:hover,
