Fixed logo issue

--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_header.scss
@@ -52,7 +52,7 @@ header.banner {
 
   a.brand {
     display: block;
-    background: url('/wp-content/themes/help_the_persecuted/dist/images/logo.svg') no-repeat top left / contain;
+    background: url('../images/logo.svg') no-repeat top left / contain;
     height: 60px;
     width: 164px;
     overflow: hidden;
