--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-ourimpact.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-ourimpact.scss
@@ -141,9 +141,9 @@
     font-size: 1.1em;
   }
 
-  .arrow-link {
-    color: $text;
-  }
+  // .arrow-link {
+  //   color: $text;
+  // }
 
   .button {
     border-color: $text;
