--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/components/_nav.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/components/_nav.scss
@@ -8,29 +8,32 @@ header.banner {
     font-weight: bold;
 
     a {
-      position: relative;
       padding: 0.5rem 1.35rem;
-      color: $black;
       font-size: 15px;
 
-      &::after {
-        position: absolute;
-        top: 100%;
-        left: 9%;
-        width: 82%;
-        height: 3px;
-        background: rgba(0, 0, 0, 0.07);
-        content: '';
-        opacity: 0;
-        transition: opacity 0.3s, transform 0.3s;
-        transform: translateY(10px);
-      }
+      &:not(:last-child) {
+        position: relative;
+        color: $black;
 
-      &:hover,
-      &:focus {
         &::after {
-          opacity: 1;
-          transform: translateY(0);
+          position: absolute;
+          top: 100%;
+          left: 9%;
+          width: 82%;
+          height: 3px;
+          background: rgba(0, 0, 0, 0.07);
+          content: '';
+          opacity: 0;
+          transition: opacity 0.3s, transform 0.3s;
+          transform: translateY(10px);
+        }
+
+        &:hover,
+        &:focus {
+          &::after {
+            opacity: 1;
+            transform: translateY(0);
+          }
         }
       }
     }
