--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/common/_variables.scss
@@ -8,7 +8,7 @@ $htp_dark_green: #263835;
 $htp_red: #aa2b2b;
 $htp_teal: #44b2a5;
 $htp_light_gray: #d8d8d8;
-$htp_dark_white: #d8d8d8;
+$htp_dark_white: #f0f0f0;
 $htp_black: #222223;
 
 /** Theme Specific */
