--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-aboutus.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-aboutus.scss
@@ -18,7 +18,7 @@
 
 .aboutus-message {
   .column:first-child {
-    background: #f0f0f0;
+    background: $htp_dark_white;
 
     .inner {
       padding: 3vw 10%;
