--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-aboutus.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-aboutus.scss
@@ -9,6 +9,7 @@
 }
 
 .img-team {
+  background-position: 73% 50%;
   background-image: url(../images/about-us-box.jpg);
 
   @media (max-width: 768px) {
