--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-home.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-home.scss
@@ -44,6 +44,8 @@
       max-width: 400px;
       margin-left: auto;
       margin-right: auto;
+      padding-left: 1em;
+      padding-right: 1em;
     }
 
     img {
@@ -154,7 +156,7 @@
 }
 
 .img-womanchild {
-  background-image: url(../images/woman-baby.jpg);
+  background-image: url(../images/homepage-story.jpg);
 }
 
 .img-refugees {
