--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-ourimpact.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-ourimpact.scss
@@ -8,8 +8,15 @@
   }
 }
 
+.disclaimer {
+  width: 100%;
+  text-align: center;
+  bottom: 10px;
+}
+
 .ourimpact-map {
   background-image: url(../images/map.jpg);
+  background-position: 75% center;
   padding: 12vh 7vw;
   position: relative;
 
