--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/components/_typography.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/components/_typography.scss
@@ -3,6 +3,7 @@ h2,
 h4,
 .heading-caps {
   font-family: $heading_caps_font;
+  font-weight: 600;
 }
 
 blockquote {
@@ -16,6 +17,7 @@ h5,
 .heading-slab,
 .arrow-link {
   font-family: $heading_slab_font;
+  font-weight: 600;
 }
 
 .arrow-link {
@@ -62,6 +64,7 @@ a:focus {
   h1 {
     font-size: 3.9em;
     color: $htp_dark_green;
+    font-weight: 600;
 
     @media (max-width: 768px) {
       font-size: 3.1em;
@@ -70,11 +73,13 @@ a:focus {
 
   h2 {
     font-size: 2.7em;
+    font-weight: 600;
   }
 
   h3 {
     font-size: 2.3em;
     color: $htp_dark_green;
+    font-weight: 600;
 
     @media (max-width: 768px) {
       font-size: 1.6em;
@@ -83,7 +88,7 @@ a:focus {
 
   h4 {
     font-size: 2em;
-    font-weight: bold;
+    font-weight: 600;
 
     @media (max-width: 768px) {
       font-size: 1.8em;
@@ -92,20 +97,24 @@ a:focus {
 
   h5 {
     font-size: 1.5em;
-    font-weight: bold;
+    font-weight: 600;
     line-height: 1.4;
   }
 
   h6 {
     text-transform: uppercase;
     font-size: 1em;
-    font-weight: bold;
+    font-weight: 600;
     line-height: 1.3;
   }
 
   p:last-child:first-child {
     margin-bottom: 1em;
   }
+}
+
+small {
+  font-size: 0.7em;
 }
 
 .fab {
@@ -118,16 +127,7 @@ a:focus {
   src:
     url('../fonts/bebasneue_bold-webfont.woff2') format('woff2'),
     url('../fonts/bebasneue_bold-webfont.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Bebas Neue';
-  src:
-    url('../fonts/bebasneue_regular-webfont.woff2') format('woff2'),
-    url('../fonts/bebasneue_regular-webfont.woff') format('woff');
-  font-weight: normal;
+  font-weight: 600;
   font-style: normal;
 }
 
