--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/components/_typography.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/components/_typography.scss
@@ -106,6 +106,10 @@ a:focus {
     font-size: 1em;
     font-weight: 600;
     line-height: 1.3;
+
+    & > p {
+      margin-bottom: 0;
+    }
   }
 
   p:last-child:first-child {
