Updates for Story format, Thor fixes

--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-ourimpact.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-ourimpact.scss
@@ -16,7 +16,8 @@
 
 .ourimpact-map {
   background-image: url(../images/map.jpg);
-  background-position: 75% center;
+  background-position: 25% 25%;
+  background-attachment: fixed;
   padding: 12vh 7vw;
   position: relative;
 
