--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_posts.scss
@@ -4,6 +4,31 @@
   padding: 20px 20px 0;
 }
 
+blockquote {
+  background: $htp_light_brown;
+  border: none;
+
+  p {
+    font-family: $heading_slab_font;
+    font-size: 1.8em;
+    text-align: center;
+  }
+}
+
+.alignright {
+  float: right;
+  margin-left: 1em;
+}
+
+.alignleft {
+  float: left;
+  margin-right: 1em;
+}
+
+.content blockquote p:last-child:first-child {
+  margin-bottom: 0;
+}
+
 .navigation {
   font-family: $heading_slab_font;
 }
