--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_posts.scss
@@ -17,6 +17,21 @@
       color: $htp_dark_green;
     }
   }
+
+  figure {
+    img {
+      display: block;
+    }
+
+    figcaption {
+      background: $htp_dark_white;
+      padding: 0.6em 1em;
+    }
+  }
+
+  blockquote p:last-child:first-child {
+    margin-bottom: 0;
+  }
 }
 
 .alignright {
@@ -27,10 +42,6 @@
 .alignleft {
   float: left;
   margin-right: 1em;
-}
-
-.content blockquote p:last-child:first-child {
-  margin-bottom: 0;
 }
 
 .navigation {
