Updates per client

--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/components/_typography.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/components/_typography.scss
@@ -126,6 +126,10 @@ small {
   font-style: normal;
 }
 
+.is-not-italic {
+  font-style: normal;
+}
+
 @font-face {
   font-family: 'Bebas Neue';
   src:
