Added mobile figure styles

--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_posts.scss
@@ -19,6 +19,16 @@
   }
 
   figure {
+    @media (max-width: 768px) {
+      width: 100%;
+      margin: 0 0 1em;
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+    }
+
     img {
       display: block;
     }
