--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/common/_global.scss
@@ -254,3 +254,21 @@ span,
     }
   }
 }
+
+.video-container {
+  height: 0;
+  padding-bottom: 56.25%;
+  position: relative;
+  margin-bottom: 1em;
+
+  iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
+}
+
+button.modal-video-close-btn {
+  padding: 0;
+  right: 0;
+}
