--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-home.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-home.scss
@@ -1,15 +1,43 @@
 .home-header {
   background-image: url(../images/alley.jpg);
   padding: 20vh 5vw;
+  position: relative;
+
+  .background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      background: rgba(0, 0, 0, 0.5);
+    }
+
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 
   h1 {
     max-width: 920px;
     margin: 0 auto;
+    position: relative;
   }
 
   a {
     margin-top: 11px;
     display: inline-block;
+    position: relative;
   }
 }
 
