Updated homepage addressing the need photo

--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-home.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-home.scss
@@ -188,8 +188,8 @@
   background-image: url(../images/homepage-story.jpg);
 }
 
-.img-refugees {
-  background-image: url(../images/refugees.jpg);
+.img-addressing-the-need {
+  background-image: url(../images/addressing_the_need.jpg);
 }
 
 .img-kids {
