Fixed play icon and flex percentage padding in Edge

--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-ourimpact.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/layouts/_page-ourimpact.scss
@@ -103,7 +103,9 @@
   margin-bottom: 40px;
 
   .fill-bg {
-    padding-bottom: 100%;
+    & > div {
+      padding-bottom: 100%;
+    }
   }
 
   .columns {
