More updates for Edge

--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/common/_global.scss
@@ -139,7 +139,7 @@ span,
       padding: 3.5vw;
 
       @media (max-width: 768px) {
-        &.fill-bg {
+        &.fill-bg > div {
           padding: 0 0 50%;
         }
       }
