Fixed for Edge/FF

--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/common/_global.scss
@@ -135,12 +135,11 @@ span,
     margin: 0;
 
     & > .column {
-      padding: 7%;
       padding: 3.5vw;
 
       @media (max-width: 768px) {
         &.fill-bg > div {
-          padding: 0 0 50%;
+          padding: 0 0 50vw;
         }
       }
 
