--- a/wp-content/themes/help_the_persecuted/resources/assets/styles/components/_typography.scss
+++ b/wp-content/themes/help_the_persecuted/resources/assets/styles/components/_typography.scss
@@ -150,9 +150,9 @@ hr.is-gray {
 }
 
 hr.mini {
-  height: 0.4em;
-  width: 10%;
-  margin: 5% 0;
+  height: 0.3em;
+  width: 5vw;
+  margin: 1em 0;
 }
 
 hr.is-white,
